# polkadot-mentor-issues

./: Cargo.toml  README.md
metadata/: collectives-polkadot.scale
src/: github.rs  html.rs  main.rs  traits.rs  types.rs
static/: Space_Mono.ttf.base64  datatables.min.css  datatables.min.js
templates/: header.stpl  issues.stpl  main.js
