
[package]
name = "mentor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["openssl"] }
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.20"
octocrab = "0.33.3"
openssl = { version = "0.10", features = ["v110"] }
sailfish = "0.8.3"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = "1.36.0"
