
[package]
name = "polkadot-mentor-issues"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["openssl"] }
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
octocrab = "0.35.0"
openssl = { version = "0.10", features = ["v110"] }
sailfish = "0.8.3"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
