
[package]
name = "polkadot-mentor-issues"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["openssl"] }
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
octocrab = "0.39.0"
openssl = { version = "0.10", features = ["v110"] }
sailfish = "0.9.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"
